--- a/tests/Makefile
+++ b/tests/Makefile
@@ -6,7 +6,6 @@ LINKFLAGS= -lgsl -lgslcblas -lm -lboost_filesystem -lboost_system
 TESTS = two_way_test.out energy_test.out test_case_0.out test_case_2.out test_case_4.out \
 random_test_cases.out test_cholesky.out	timer.out
 
-
 all: $(TESTS) HF.wf one_mat.m
 	./two_way_test.out
 	./energy_test.out
@@ -16,7 +15,6 @@ all: $(TESTS) HF.wf one_mat.m
 	./random_test_cases.out
 	./test_cholesky.out
 	./timer.out -p 4 -e 200 -f test.cho -d uniform
->>>>>>> remove_bitset
 
 %.out: %.o $(OBJ)
 	g++ -o $@ $^ $(LINKFLAGS)
@@ -29,13 +27,13 @@ tandem.o: ../tandem.cpp $(DEPS)
 
 HF.wf one_mat.m : two_way_test.py
 	( \
-	. ../../../../bin/activate; \
+	. ../../bin/activate; \
 	python two_way_test.py; \
 	)
 
-timer.out : timer.cpp ../ra.h
+timer.out : timer.cpp ../tandem.h
 	$(CC) -I. -c timer.cpp --std=c++11 -g
-	$(CC) -o timer.out timer.o -lgsl -lgslcblas -lm -lboost_filesystem -lboost_system
+	$(CC) -o timer.out timer.o -lgsl -lgslcblas -lm -lboost_filesystem -lboost_system tandem.o
 
 clean:
 	rm HF.wf one_mat.m
