--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,14 @@
 language: python
+
+os: linux
+dist: trusty
+sudo: required
+
 python:
   - "2.7"
+
 install:
+  - sudo apt-get install libboost-all-dev libgsl0-dev
   - make
   - pip install -r requirements.txt
 # command to run tests
