--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,6 @@ install:
   - sudo apt-get install libboost-all-dev libgsl0-dev
   - make
   - pip install -r requirements.txt
+  - export PYTHONPATH=$PWD
 # command to run tests
 script: pytest
