Add use travic-ci and boost.test to test zero_spin configuration
Initial step before converting all tandem c++ tests into boost.test +
travis-ci automated tests.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ python:
 install:
   - sudo apt-get install libboost-all-dev libgsl0-dev
   - make
+  - make -C tests zero_spin.out
   - pip install -r requirements.txt
   - export PYTHONPATH=$PWD
 # command to run tests
-script: pytest
+script:
+  - pytest
+  - zero_spin.out
