Add HartreeFock wf generation and generalize HF testing
It is now the tests/Makefiles responsibility to keep track of what
files to compile and what tests to run.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ python:
 install:
   - sudo apt-get install libboost-all-dev libgsl0-dev
   - make
-  - make -C tests zero_spin.out
+  - make -C tests
   - pip install -r requirements.txt
   - export PYTHONPATH=$PWD
 # command to run tests
 script:
   - pytest
-  - ./tests/zero_spin.out
+  - make -C tests run
