--- a/tests/Makefile
+++ b/tests/Makefile
@@ -5,21 +5,23 @@ CFLAGS=-I. -std=c++11 -g
 DEPS=../*.h
 OBJ = tandem.o test.o
 LINKFLAGS= -lgsl -lgslcblas -lm -lboost_filesystem -lboost_system
-TESTS = two_way_test.out energy_test.out test_case_0.out test_case_2.out test_case_4.out \
-random_test_cases.out test_cholesky.out	timer.out zero_spin.out
+# TESTS = two_way_test.out energy_test.out test_case_0.out test_case_2.out test_case_4.out \
+# random_test_cases.out test_cholesky.out	timer.out zero_spin.out
+TESTS = zero_spin.out hf_test.out
 
 all: $(TESTS) HF.wf one_mat.m
 
 run: $(TESTS) HF.wf one_mat.m
-	./two_way_test.out
-	./energy_test.out
-	./test_case_0.out
-	./test_case_2.out
-	./test_case_4.out
-	./random_test_cases.out
-	./test_cholesky.out
-	./timer.out -p 4 -e 200 -f test.cho -d uniform
 	./zero_spin.out
+	./hf_test.out
+# ./two_way_test.out
+# ./energy_test.out
+# ./test_case_0.out
+# ./test_case_2.out
+# ./test_case_4.out
+# ./random_test_cases.out
+# ./test_cholesky.out
+# ./timer.out -p 4 -e 200 -f test.cho -d uniform
 
 %.out: %.o $(OBJ)
 	g++ -o $@ $^ $(LINKFLAGS)
