--- a/tests/Makefile
+++ b/tests/Makefile
@@ -5,16 +5,16 @@ CFLAGS=-I. -std=c++11 -g
 DEPS=../*.h
 OBJ = tandem.o test.o
 LINKFLAGS= -lgsl -lgslcblas -lm -lboost_filesystem -lboost_system
-# TESTS = two_way_test.out energy_test.out test_case_0.out test_case_2.out test_case_4.out \
+# TESTS = energy_test.out test_case_0.out test_case_2.out test_case_4.out \
 # random_test_cases.out test_cholesky.out	timer.out zero_spin.out
-TESTS = zero_spin.out hf_test.out
+TESTS = zero_spin.out hf_test.out two_way_test.out
 
 all: $(TESTS) HF.wf one_mat.m
 
 run: $(TESTS) HF.wf one_mat.m
 	./zero_spin.out
 	./hf_test.out
-# ./two_way_test.out
+	./two_way_test.out
 # ./energy_test.out
 # ./test_case_0.out
 # ./test_case_2.out
@@ -33,10 +33,7 @@ tandem.o: ../tandem.cpp $(DEPS)
 	g++ -c -o $@ $< $(CFLAGS)
 
 HF.wf one_mat.m : two_way_test.py
-	( \
-	. ../../bin/activate; \
-	python two_way_test.py; \
-	)
+	python two_way_test.py
 
 timer.out : timer.cpp ../tandem.h
 	$(CC) -I. -c timer.cpp --std=c++11 -g
