--- a/tests/Makefile
+++ b/tests/Makefile
@@ -5,9 +5,9 @@ CFLAGS=-I. -std=c++11 -g
 DEPS=../*.h
 OBJ = tandem.o test.o
 LINKFLAGS= -lgsl -lgslcblas -lm -lboost_filesystem -lboost_system
-# TESTS = energy_test.out test_case_0.out test_case_2.out test_case_4.out \
+# TESTS = test_case_0.out test_case_2.out test_case_4.out \
 # random_test_cases.out test_cholesky.out	timer.out zero_spin.out
-TESTS = zero_spin.out hf_test.out two_way_test.out energy_test.out
+TESTS = zero_spin.out hf_test.out two_way_test.out energy_test.out tandem_test.out
 
 all: $(TESTS) HF.wf one_mat.m
 
@@ -16,6 +16,7 @@ run: $(TESTS) HF.wf one_mat.m
 	./hf_test.out
 	./two_way_test.out
 	./energy_test.out
+	./tandem_test.out
 # ./test_case_0.out
 # ./test_case_2.out
 # ./test_case_4.out
